<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/options_fragment_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/about_options_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_padding"
                android:text="@string/about_options_fragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/min_mag_text_view"
                style="@style/search_options_category"
                android:text="@string/minimum_magnitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_options_fragment" />

            <NumberPicker
                android:id="@+id/number_picker_min_magnitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/min_mag_text_view" />

            <TextView
                android:id="@+id/max_mag_text_view"
                style="@style/search_options_category"
                android:text="@string/maximum_magnitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_picker_min_magnitude" />

            <NumberPicker
                android:id="@+id/number_picker_max_magnitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/max_mag_text_view" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_padding"
                android:text="@string/search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_max_radius_km" />

            <CheckBox
                android:id="@+id/check_box_min_mag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/min_mag_text_view"
                app:layout_constraintStart_toEndOf="@+id/min_mag_text_view"
                app:layout_constraintTop_toTopOf="@+id/min_mag_text_view" />

            <CheckBox
                android:id="@+id/check_box_max_mag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/max_mag_text_view"
                app:layout_constraintStart_toEndOf="@+id/max_mag_text_view"
                app:layout_constraintTop_toTopOf="@+id/max_mag_text_view" />

            <TextView
                android:id="@+id/order_by_text_view"
                style="@style/search_options_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_by_"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/number_picker_max_magnitude" />

            <CheckBox
                android:id="@+id/check_box_order_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/order_by_text_view"
                app:layout_constraintStart_toEndOf="@+id/order_by_text_view"
                app:layout_constraintTop_toTopOf="@+id/order_by_text_view" />

            <RadioGroup
                android:id="@+id/order_by_search_options_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_padding"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_by_text_view">

                <RadioButton
                    android:id="@+id/time_asc_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_asc" />

                <RadioButton
                    android:id="@+id/mag_desc_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mag_desc" />

                <RadioButton
                    android:id="@+id/mag_asc_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mag_asc" />
            </RadioGroup>

            <TextView
                android:id="@+id/max_radius_km_text_view"
                style="@style/search_options_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maximum_km"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_by_search_options_radio_group" />

            <CheckBox
                android:id="@+id/check_box_max_radius_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/max_radius_km_text_view"
                app:layout_constraintStart_toEndOf="@+id/max_radius_km_text_view"
                app:layout_constraintTop_toTopOf="@+id/max_radius_km_text_view" />

            <EditText
                android:id="@+id/edit_text_max_radius_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/number_between_zero_twenty_thousand"
                android:inputType="number"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/max_radius_km_text_view"
                android:autofillHints="@string/number_between_zero_twenty_thousand"
                tools:targetApi="o" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>